--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
     </div>
   </div>
 
-
-  <!-- Draggable only -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@shopify/draggable@1.0.0-beta.11/lib/draggable.js"></script> -->
+  <!-- axios -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.js"></script>
   <!-- Sortable only -->
   <script src="https://cdn.jsdelivr.net/npm/@shopify/draggable@1.0.0-beta.11/lib/sortable.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/@shopify/draggable@1.0.0-beta.11/lib/droppable.js"></script> -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/@shopify/draggable@1.0.0-beta.13/lib/sortable.js"></script> -->
   <script src="./index.js"></script>
+  <script src="./request.js"></script>
 </body>
 
 </html>
